--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-click==8.0.4
+click
 dataclasses
-Flask==2.0.3
-gunicorn==20.1.0
-importlib-metadata==4.8.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-pkg-resources==0.0.0
-typing-extensions==4.1.1
-Werkzeug==2.0.3
-zipp==3.6.0
+Flask
+gunicorn
+importlib-metadata
+itsdangerous
+Jinja2
+MarkupSafe
+pkg-resources
+typing-extensions
+Werkzeug
+zipp
